k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-deployment-iut-__RUNNING_ENV__
  namespace: k-erp-iut-__RUNNING_ENV__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo-iut-__RUNNING_ENV__
  template:
    metadata:
      labels:
        app: odoo-iut-__RUNNING_ENV__
    spec:
      nodeSelector:
        kerp: "true"
      imagePullSecrets:
        - name: registrypullsecret
      containers:
        - name: odoo-iut-__RUNNING_ENV__
          image: __CI_REGISTRY_IMAGE__:__VERSION__
          args: ["odoo", "--load=web,attachment_s3,session_redis,logging_json_kal-it,elastic_apm", "--unaccent"]
          ports:
            - containerPort: 8069
              name: odoo
            - containerPort: 8072
              name: longpolling
